--- a/SolidNavigation.Sdk/SolidNavigation.Sdk.csproj
+++ b/SolidNavigation.Sdk/SolidNavigation.Sdk.csproj
@@ -37,11 +37,12 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NavigateServiceBase.cs" />
+    <Compile Include="NavigationServiceBase.cs" />
     <Compile Include="NavigationTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Route.cs" />
     <Compile Include="Router.cs" />
+    <Compile Include="TypeReflectionExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
